src/jsc/bindings/libuv/uv.h

typedef enum {
#define XX(code, _) UV_##code = UV__##code,
    UV_ERRNO_MAP(XX)
#undef XX
        UV_ERRNO_MAX
    = UV__EOF - 1
} uv_errno_t;
/* Handle types. */
typedef struct uv_loop_s uv_loop_t;
typedef struct uv_handle_s uv_handle_t;
typedef struct uv_stream_s uv_stream_t;
typedef struct uv_tcp_s uv_tcp_t;
typedef struct uv_udp_s uv_udp_t;
typedef struct uv_pipe_s uv_pipe_t;
typedef struct uv_tty_s uv_tty_t;
typedef struct uv_poll_s uv_poll_t;
typedef struct uv_timer_s uv_timer_t;
typedef struct uv_prepare_s uv_prepare_t;
typedef struct uv_check_s uv_check_t;
typedef struct uv_idle_s uv_idle_t;
typedef struct uv_async_s uv_async_t;
typedef struct uv_process_s uv_process_t;
typedef struct uv_fs_event_s uv_fs_event_t;
typedef struct uv_fs_poll_s uv_fs_poll_t;
typedef struct uv_signal_s uv_signal_t;
/* Request types. */
typedef struct uv_req_s uv_req_t;
typedef struct uv_getaddrinfo_s uv_getaddrinfo_t;
typedef struct uv_getnameinfo_s uv_getnameinfo_t;
typedef struct uv_shutdown_s uv_shutdown_t;
typedef struct uv_write_s uv_write_t;
typedef struct uv_connect_s uv_connect_t;
typedef struct uv_udp_send_s uv_udp_send_t;
typedef struct uv_work_s uv_work_t;
typedef struct uv_random_s uv_random_t;
typedef void (*uv_close_cb)(uv_handle_t* handle);
typedef enum {
    UV_CLOCK_MONOTONIC,
    UV_CLOCK_REALTIME
} uv_clock_id;
typedef struct {
    int64_t tv_sec;
    int32_t tv_nsec;
} uv_timespec64_t;
typedef struct {
    int64_t tv_sec;
    int32_t tv_usec;
} uv_timeval64_t;
/* Abstract base class of all requests. */
struct uv_req_s {
    UV_REQ_FIELDS
};
struct uv_shutdown_s {
    UV_REQ_FIELDS
    uv_stream_t* handle;
    uv_shutdown_cb cb;
    UV_SHUTDOWN_PRIVATE_FIELDS
};
/* The abstract base class of all handles. */
struct uv_handle_s {
    UV_HANDLE_FIELDS
};
UV_EXTERN void uv_close(uv_handle_t* handle, uv_close_cb close_cb);
/*
 * uv_stream_t is a subclass of uv_handle_t.
 *
 * uv_stream is an abstract class.
 *
 * uv_stream_t is the parent class of uv_tcp_t, uv_pipe_t and uv_tty_t.
 */
struct uv_stream_s {
    UV_HANDLE_FIELDS
    UV_STREAM_FIELDS
};
/* uv_write_t is a subclass of uv_req_t. */
struct uv_write_s {
    UV_REQ_FIELDS
    uv_write_cb cb;
    uv_stream_t* send_handle; /* TODO: make private and unix-only in v2.x. */
    uv_stream_t* handle;
    UV_WRITE_PRIVATE_FIELDS
};
UV_EXTERN int uv_is_closing(const uv_handle_t* handle);
/*
 * uv_tcp_t is a subclass of uv_stream_t.
 *
 * Represents a TCP stream or TCP server.
 */
struct uv_tcp_s {
    UV_HANDLE_FIELDS
    UV_STREAM_FIELDS
    UV_TCP_PRIVATE_FIELDS
};
/* uv_connect_t is a subclass of uv_req_t. */
struct uv_connect_s {
    UV_REQ_FIELDS
    uv_connect_cb cb;
    uv_stream_t* handle;
    UV_CONNECT_PRIVATE_FIELDS
};
/* uv_udp_t is a subclass of uv_handle_t. */
struct uv_udp_s {
    UV_HANDLE_FIELDS
    /* read-only */
    /*
     * Number of bytes queued for sending. This field strictly shows how much
     * information is currently queued.
     */
    size_t send_queue_size;
    /*
     * Number of send requests currently in the queue awaiting to be processed.
     */
    size_t send_queue_count;
    UV_UDP_PRIVATE_FIELDS
};
/* uv_udp_send_t is a subclass of uv_req_t. */
struct uv_udp_send_s {
    UV_REQ_FIELDS
    uv_udp_t* handle;
    uv_udp_send_cb cb;
    UV_UDP_SEND_PRIVATE_FIELDS
};
/*
 * uv_tty_t is a subclass of uv_stream_t.
 *
 * Representing a stream for the console.
 */
struct uv_tty_s {
    UV_HANDLE_FIELDS
    UV_STREAM_FIELDS
    UV_TTY_PRIVATE_FIELDS
};
/*
 * uv_pipe_t is a subclass of uv_stream_t.
 *
 * Representing a pipe stream or pipe server. On Windows this is a Named
 * Pipe. On Unix this is a Unix domain socket.
 */
struct uv_pipe_s {
    UV_HANDLE_FIELDS
    UV_STREAM_FIELDS
    int ipc; /* non-zero if this pipe is used for passing handles */
    UV_PIPE_PRIVATE_FIELDS
};
struct uv_poll_s {
    UV_HANDLE_FIELDS
    uv_poll_cb poll_cb;
    UV_POLL_PRIVATE_FIELDS
};
struct uv_prepare_s {
    UV_HANDLE_FIELDS
    UV_PREPARE_PRIVATE_FIELDS
};
struct uv_check_s {
    UV_HANDLE_FIELDS
    UV_CHECK_PRIVATE_FIELDS
};
struct uv_idle_s {
    UV_HANDLE_FIELDS
    UV_IDLE_PRIVATE_FIELDS
};
struct uv_async_s {
    UV_HANDLE_FIELDS
    UV_ASYNC_PRIVATE_FIELDS
};
/*
 * uv_timer_t is a subclass of uv_handle_t.
 *
 * Used to get woken up at a specified time in the future.
 */
struct uv_timer_s {
    UV_HANDLE_FIELDS
    UV_TIMER_PRIVATE_FIELDS
};
/*
 * uv_getaddrinfo_t is a subclass of uv_req_t.
 *
 * Request object for uv_getaddrinfo.
 */
struct uv_getaddrinfo_s {
    UV_REQ_FIELDS
    /* read-only */
    uv_loop_t* loop;
    /* struct addrinfo* addrinfo is marked as private, but it really isn't. */
    UV_GETADDRINFO_PRIVATE_FIELDS
};
/*
 * uv_getnameinfo_t is a subclass of uv_req_t.
 *
 * Request object for uv_getnameinfo.
 */
struct uv_getnameinfo_s {
    UV_REQ_FIELDS
    /* read-only */
    uv_loop_t* loop;
    /* host and service are marked as private, but they really aren't. */
    UV_GETNAMEINFO_PRIVATE_FIELDS
};
/*
 * uv_process_t is a subclass of uv_handle_t.
 */
struct uv_process_s {
    UV_HANDLE_FIELDS
    uv_exit_cb exit_cb;
    int pid;
    UV_PROCESS_PRIVATE_FIELDS
};
/*
 * uv_work_t is a subclass of uv_req_t.
 */
struct uv_work_s {
    UV_REQ_FIELDS
    uv_loop_t* loop;
    uv_work_cb work_cb;
    uv_after_work_cb after_work_cb;
    UV_WORK_PRIVATE_FIELDS
};
struct uv_fs_event_s {
    UV_HANDLE_FIELDS
    /* private */
    char* path;
    UV_FS_EVENT_PRIVATE_FIELDS
};
/*
 * uv_fs_stat() based polling file watcher.
 */
struct uv_fs_poll_s {
    UV_HANDLE_FIELDS
    /* Private, don't touch. */
    void* poll_ctx;
};
struct uv_signal_s {
    UV_HANDLE_FIELDS
    uv_signal_cb signal_cb;
    int signum;
    UV_SIGNAL_PRIVATE_FIELDS
};
struct uv_random_s {
    UV_REQ_FIELDS
    /* read-only */
    uv_loop_t* loop;
    /* private */
    int status;
    void* buf;
    size_t buflen;
    uv_random_cb cb;
    struct uv__work work_req;
};
UV_EXTERN int uv_if_indextoname(unsigned int ifindex,
    char* buffer,
    size_t* size);
UV_EXTERN int uv_if_indextoiid(unsigned int ifindex,
    char* buffer,
    size_t* size);
UV_EXTERN int uv_exepath(char* buffer, size_t* size);
UV_EXTERN int uv_cwd(char* buffer, size_t* size);
UV_EXTERN int uv_chdir(const char* dir);
UV_EXTERN uint64_t uv_get_free_memory(void);
UV_EXTERN uint64_t uv_get_total_memory(void);
UV_EXTERN uint64_t uv_get_constrained_memory(void);
UV_EXTERN uint64_t uv_get_available_memory(void);
UV_EXTERN int uv_clock_gettime(uv_clock_id clock_id, uv_timespec64_t* ts);
UV_EXTERN uint64_t uv_hrtime(void);
UV_EXTERN void uv_sleep(unsigned int msec);
UV_EXTERN void uv_disable_stdio_inheritance(void);
UV_EXTERN int uv_dlopen(const char* filename, uv_lib_t* lib);
UV_EXTERN void uv_dlclose(uv_lib_t* lib);
UV_EXTERN int uv_dlsym(uv_lib_t* lib, const char* name, void** ptr);
UV_EXTERN const char* uv_dlerror(const uv_lib_t* lib);
UV_EXTERN int uv_mutex_init(uv_mutex_t* handle);
UV_EXTERN int uv_mutex_init_recursive(uv_mutex_t* handle);
UV_EXTERN void uv_mutex_destroy(uv_mutex_t* handle);
UV_EXTERN void uv_mutex_lock(uv_mutex_t* handle);
UV_EXTERN int uv_mutex_trylock(uv_mutex_t* handle);
UV_EXTERN void uv_mutex_unlock(uv_mutex_t* handle);
UV_EXTERN int uv_rwlock_init(uv_rwlock_t* rwlock);
UV_EXTERN void uv_rwlock_destroy(uv_rwlock_t* rwlock);
UV_EXTERN void uv_rwlock_rdlock(uv_rwlock_t* rwlock);
UV_EXTERN int uv_rwlock_tryrdlock(uv_rwlock_t* rwlock);
UV_EXTERN void uv_rwlock_rdunlock(uv_rwlock_t* rwlock);
UV_EXTERN void uv_rwlock_wrlock(uv_rwlock_t* rwlock);
UV_EXTERN int uv_rwlock_trywrlock(uv_rwlock_t* rwlock);
UV_EXTERN void uv_rwlock_wrunlock(uv_rwlock_t* rwlock);
UV_EXTERN int uv_sem_init(uv_sem_t* sem, unsigned int value);
UV_EXTERN void uv_sem_destroy(uv_sem_t* sem);
UV_EXTERN void uv_sem_post(uv_sem_t* sem);
UV_EXTERN void uv_sem_wait(uv_sem_t* sem);
UV_EXTERN int uv_sem_trywait(uv_sem_t* sem);
UV_EXTERN int uv_cond_init(uv_cond_t* cond);
UV_EXTERN void uv_cond_destroy(uv_cond_t* cond);
UV_EXTERN void uv_cond_signal(uv_cond_t* cond);
UV_EXTERN void uv_cond_broadcast(uv_cond_t* cond);
UV_EXTERN int uv_barrier_init(uv_barrier_t* barrier, unsigned int count);
UV_EXTERN void uv_barrier_destroy(uv_barrier_t* barrier);
UV_EXTERN int uv_barrier_wait(uv_barrier_t* barrier);
UV_EXTERN void uv_cond_wait(uv_cond_t* cond, uv_mutex_t* mutex);
UV_EXTERN int uv_cond_timedwait(uv_cond_t* cond,
    uv_mutex_t* mutex,
    uint64_t timeout);
UV_EXTERN void uv_once(uv_once_t* guard, void (*callback)(void));
UV_EXTERN int uv_key_create(uv_key_t* key);
UV_EXTERN void uv_key_delete(uv_key_t* key);
UV_EXTERN void* uv_key_get(uv_key_t* key);
UV_EXTERN void uv_key_set(uv_key_t* key, void* value);
UV_EXTERN int uv_gettimeofday(uv_timeval64_t* tv);
typedef void (*uv_thread_cb)(void* arg);
UV_EXTERN int uv_thread_create(uv_thread_t* tid, uv_thread_cb entry, void* arg);
typedef enum {
    UV_THREAD_NO_FLAGS = 0x00,
    UV_THREAD_HAS_STACK_SIZE = 0x01
} uv_thread_create_flags;
struct uv_thread_options_s {
    unsigned int flags;
    size_t stack_size;
    /* More fields may be added at any time. */
};
typedef struct uv_thread_options_s uv_thread_options_t;
UV_EXTERN int uv_thread_create_ex(uv_thread_t* tid,
    const uv_thread_options_t* params,
    uv_thread_cb entry,
    void* arg);
UV_EXTERN int uv_thread_setaffinity(uv_thread_t* tid,
    char* cpumask,
    char* oldmask,
    size_t mask_size);
UV_EXTERN int uv_thread_getaffinity(uv_thread_t* tid,
    char* cpumask,
    size_t mask_size);
UV_EXTERN int uv_thread_getcpu(void);
UV_EXTERN uv_thread_t uv_thread_self(void);
UV_EXTERN int uv_thread_join(uv_thread_t* tid);
UV_EXTERN int uv_thread_equal(const uv_thread_t* t1, const uv_thread_t* t2);
struct uv_loop_s {
    /* User data - use this for whatever. */
    void* data;
    /* Loop reference counting. */
    unsigned int active_handles;
    struct uv__queue handle_queue;
    union {
        void* unused;
        unsigned int count;
    } active_reqs;
    /* Internal storage for future extensions. */
    void* internal_fields;
    /* Internal flag to signal loop stop. */
    unsigned int stop_flag;
    UV_LOOP_PRIVATE_FIELDS
};
UV_EXTERN void* uv_loop_get_data(const uv_loop_t*);
UV_EXTERN void uv_loop_set_data(uv_loop_t*, void* data);