src/deps/libuv.zig

pub extern fn uv_if_indextoname(ifindex: c_uint, buffer: [*]u8, size: [*c]usize) c_int;
pub extern fn uv_if_indextoiid(ifindex: c_uint, buffer: [*]u8, size: [*c]usize) c_int;
pub extern fn uv_exepath(buffer: [*]u8, size: [*c]usize) c_int;
pub extern fn uv_cwd(buffer: [*]u8, size: [*c]usize) c_int;
pub extern fn uv_chdir(dir: [*]const u8) c_int;
pub extern fn uv_get_free_memory() u64;
pub extern fn uv_get_total_memory() u64;
pub extern fn uv_get_constrained_memory() u64;
pub extern fn uv_get_available_memory() u64;
pub extern fn uv_clock_gettime(clock_id: uv_clock_id, ts: [*c]uv_timespec64_t) c_int;
pub extern fn uv_hrtime() u64;
pub extern fn uv_sleep(msec: c_uint) void;
pub extern fn uv_disable_stdio_inheritance() void;
pub extern fn uv_dlopen(filename: [*]const u8, lib: [*c]uv_lib_t) c_int;
pub extern fn uv_dlclose(lib: [*c]uv_lib_t) void;
pub extern fn uv_dlsym(lib: [*c]uv_lib_t, name: [*]const u8, ptr: [*c]?*anyopaque) c_int;
pub extern fn uv_dlerror(lib: [*c]const uv_lib_t) [*]const u8;
// pub extern fn uv_mutex_init(handle: *uv_mutex_t) c_int;
// pub extern fn uv_mutex_init_recursive(handle: *uv_mutex_t) c_int;
// pub extern fn uv_mutex_destroy(handle: *uv_mutex_t) void;
// pub extern fn uv_mutex_lock(handle: *uv_mutex_t) void;
// pub extern fn uv_mutex_trylock(handle: *uv_mutex_t) c_int;
// pub extern fn uv_mutex_unlock(handle: *uv_mutex_t) void;
// pub extern fn uv_rwlock_init(rwlock: [*c]uv_rwlock_t) c_int;
// pub extern fn uv_rwlock_destroy(rwlock: [*c]uv_rwlock_t) void;
// pub extern fn uv_rwlock_rdlock(rwlock: [*c]uv_rwlock_t) void;
// pub extern fn uv_rwlock_tryrdlock(rwlock: [*c]uv_rwlock_t) c_int;
// pub extern fn uv_rwlock_rdunlock(rwlock: [*c]uv_rwlock_t) void;
// pub extern fn uv_rwlock_wrlock(rwlock: [*c]uv_rwlock_t) void;
// pub extern fn uv_rwlock_trywrlock(rwlock: [*c]uv_rwlock_t) c_int;
// pub extern fn uv_rwlock_wrunlock(rwlock: [*c]uv_rwlock_t) void;
// pub extern fn uv_sem_init(sem: [*c]uv_sem_t, value: c_uint) c_int;
// pub extern fn uv_sem_destroy(sem: [*c]uv_sem_t) void;
// pub extern fn uv_sem_post(sem: [*c]uv_sem_t) void;
// pub extern fn uv_sem_wait(sem: [*c]uv_sem_t) void;
// pub extern fn uv_sem_trywait(sem: [*c]uv_sem_t) c_int;
// pub extern fn uv_cond_init(cond: [*c]uv_cond_t) c_int;
// pub extern fn uv_cond_destroy(cond: [*c]uv_cond_t) void;
// pub extern fn uv_cond_signal(cond: [*c]uv_cond_t) void;
// pub extern fn uv_cond_broadcast(cond: [*c]uv_cond_t) void;
// pub extern fn uv_barrier_init(barrier: [*c]uv_barrier_t, count: c_uint) c_int;
// pub extern fn uv_barrier_destroy(barrier: [*c]uv_barrier_t) void;
// pub extern fn uv_barrier_wait(barrier: [*c]uv_barrier_t) c_int;
// pub extern fn uv_cond_wait(cond: [*c]uv_cond_t, mutex: [*c]uv_mutex_t) void;
// pub extern fn uv_cond_timedwait(cond: [*c]uv_cond_t, mutex: [*c]uv_mutex_t, timeout: u64) c_int;
pub extern fn uv_once(guard: [*c]uv_once_t, callback: ?*const fn () callconv(.C) void) void;
pub extern fn uv_key_create(key: [*c]uv_key_t) c_int;
pub extern fn uv_key_delete(key: [*c]uv_key_t) void;
pub extern fn uv_key_get(key: [*c]uv_key_t) ?*anyopaque;
pub extern fn uv_key_set(key: [*c]uv_key_t, value: ?*anyopaque) void;
pub extern fn uv_gettimeofday(tv: [*c]uv_timeval64_t) c_int;
pub const uv_thread_cb = ?*const fn (?*anyopaque) callconv(.C) void;
pub extern fn uv_thread_create(tid: [*c]uv_thread_t, entry: uv_thread_cb, arg: ?*anyopaque) c_int;
pub const UV_THREAD_NO_FLAGS: c_int = 0;
pub const UV_THREAD_HAS_STACK_SIZE: c_int = 1;
pub const uv_thread_create_flags = c_uint;
pub const struct_uv_thread_options_s = extern struct {
    flags: c_uint,
    stack_size: usize,
};
pub const uv_thread_options_t = struct_uv_thread_options_s;
pub extern fn uv_thread_create_ex(tid: [*c]uv_thread_t, params: [*c]const uv_thread_options_t, entry: uv_thread_cb, arg: ?*anyopaque) c_int;
pub extern fn uv_thread_setaffinity(tid: [*c]uv_thread_t, cpumask: [*]u8, oldmask: [*]u8, mask_size: usize) c_int;
pub extern fn uv_thread_getaffinity(tid: [*c]uv_thread_t, cpumask: [*]u8, mask_size: usize) c_int;
pub extern fn uv_thread_getcpu() c_int;
pub extern fn uv_thread_self() uv_thread_t;
pub extern fn uv_thread_join(tid: [*c]uv_thread_t) c_int;
pub extern fn uv_thread_equal(t1: [*c]const uv_thread_t, t2: [*c]const uv_thread_t) c_int;
pub const union_uv_any_handle = extern union {
    @"async": uv_async_t,
    check: uv_check_t,
    fs_event: uv_fs_event_t,
    fs_poll: uv_fs_poll_t,
    handle: uv_handle_t,
    idle: uv_idle_t,
    pipe: uv_pipe_t,
    poll: uv_poll_t,
    prepare: uv_prepare_t,
    process: uv_process_t,
    stream: uv_stream_t,
    tcp: uv_tcp_t,
    timer: uv_timer_t,
    tty: uv_tty_t,
    udp: uv_udp_t,
    signal: uv_signal_t,
};
pub const union_uv_any_req = extern union {
    req: uv_req_t,
    connect: uv_connect_t,
    write: uv_write_t,
    shutdown: uv_shutdown_t,
    udp_send: uv_udp_send_t,
    fs: fs_t,
    work: uv_work_t,
    getaddrinfo: uv_getaddrinfo_t,
    getnameinfo: uv_getnameinfo_t,
    random: uv_random_t,
};
pub extern fn uv_loop_get_data([*c]const uv_loop_t) ?*anyopaque;
pub extern fn uv_loop_set_data(*uv_loop_t, data: ?*anyopaque) void;

pub const UV_HANDLE_CLOSED: c_int = 0x00000002;

// uv_is_closing checks for closing or closed, we need to know if is indeed closed so we can deinit without call uv_close
pub fn uv_is_closed(handle: *const uv_handle_t) bool {
    return (handle.flags & UV_HANDLE_CLOSED != 0);
}

pub fn translateUVErrorToE(code: anytype) bun.C.E {
    return switch (code) {
        UV_EPERM => bun.C.E.PERM,
        UV_ENOENT => bun.C.E.NOENT,
        UV_ESRCH => bun.C.E.SRCH,
        UV_EINTR => bun.C.E.INTR,
        UV_EIO => bun.C.E.IO,
        UV_ENXIO => bun.C.E.NXIO,
        UV_E2BIG => bun.C.E.@"2BIG",
        UV_EBADF => bun.C.E.BADF,
        UV_EAGAIN => bun.C.E.AGAIN,
        UV_ENOMEM => bun.C.E.NOMEM,
        UV_EACCES => bun.C.E.ACCES,
        UV_EFAULT => bun.C.E.FAULT,
        UV_EBUSY => bun.C.E.BUSY,
        UV_EEXIST => bun.C.E.EXIST,
        UV_EXDEV => bun.C.E.XDEV,
        UV_ENODEV => bun.C.E.NODEV,
        UV_ENOTDIR => bun.C.E.NOTDIR,
        UV_EISDIR => bun.C.E.ISDIR,
        UV_EINVAL => bun.C.E.INVAL,
        UV_ENFILE => bun.C.E.NFILE,
        UV_EMFILE => bun.C.E.MFILE,
        UV_ENOTTY => bun.C.E.NOTTY,
        UV_ETXTBSY => bun.C.E.TXTBSY,
        UV_EFBIG => bun.C.E.FBIG,
        UV_ENOSPC => bun.C.E.NOSPC,
        UV_ESPIPE => bun.C.E.SPIPE,
        UV_EROFS => bun.C.E.ROFS,
        UV_EMLINK => bun.C.E.MLINK,
        UV_EPIPE => bun.C.E.PIPE,
        UV_ERANGE => bun.C.E.RANGE,
        UV_ENAMETOOLONG => bun.C.E.NAMETOOLONG,
        UV_ENOSYS => bun.C.E.NOSYS,
        UV_ENOTEMPTY => bun.C.E.NOTEMPTY,
        UV_ELOOP => bun.C.E.LOOP,
        UV_EUNATCH => bun.C.E.UNATCH,
        UV_ENODATA => bun.C.E.NODATA,
        UV_ENONET => bun.C.E.NONET,
        UV_EPROTO => bun.C.E.PROTO,
        UV_EOVERFLOW => bun.C.E.OVERFLOW,
        UV_EILSEQ => bun.C.E.ILSEQ,
        UV_ENOTSOCK => bun.C.E.NOTSOCK,
        UV_EDESTADDRREQ => bun.C.E.DESTADDRREQ,
        UV_EMSGSIZE => bun.C.E.MSGSIZE,
        UV_EPROTOTYPE => bun.C.E.PROTOTYPE,
        UV_ENOPROTOOPT => bun.C.E.NOPROTOOPT,
        UV_EPROTONOSUPPORT => bun.C.E.PROTONOSUPPORT,
        UV_ESOCKTNOSUPPORT => bun.C.E.SOCKTNOSUPPORT,
        UV_ENOTSUP => bun.C.E.NOTSUP,
        UV_EAFNOSUPPORT => bun.C.E.AFNOSUPPORT,
        UV_EADDRINUSE => bun.C.E.ADDRINUSE,
        UV_EADDRNOTAVAIL => bun.C.E.ADDRNOTAVAIL,
        UV_ENETDOWN => bun.C.E.NETDOWN,
        UV_ENETUNREACH => bun.C.E.NETUNREACH,
        UV_ECONNABORTED => bun.C.E.CONNABORTED,
        UV_ECONNRESET => bun.C.E.CONNRESET,
        UV_ENOBUFS => bun.C.E.NOBUFS,
        UV_EISCONN => bun.C.E.ISCONN,
        UV_ENOTCONN => bun.C.E.NOTCONN,
        UV_ESHUTDOWN => bun.C.E.SHUTDOWN,
        UV_ETIMEDOUT => bun.C.E.TIMEDOUT,
        UV_ECONNREFUSED => bun.C.E.CONNREFUSED,
        UV_EHOSTDOWN => bun.C.E.HOSTDOWN,
        UV_EHOSTUNREACH => bun.C.E.HOSTUNREACH,
        UV_EALREADY => bun.C.E.ALREADY,
        UV_EREMOTEIO => bun.C.E.REMOTEIO,
        UV_ECANCELED => bun.C.E.CANCELED,
        UV_ECHARSET => bun.C.E.CHARSET,
        UV_EOF => bun.C.E.OF,
        else => @enumFromInt(-code),
    };
}

pub const ReturnCode = enum(c_int) {
    pub fn format(this: ReturnCode, comptime fmt_: []const u8, options_: std.fmt.FormatOptions, writer: anytype) !void {
        _ = fmt_;
        _ = options_;

        if (this.errEnum()) |err| {
            try writer.writeAll(@tagName(err));
        } else {
            try writer.print("{d}", .{this.value});
        }
    }
